<resources>
    <string name="app_name">ToDoList</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="mine">Mine</string>
    <string name="calendar_tasks">Calendar Tasks</string>
    <string name="all">All</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="fab_content_desc">Add new task</string>
    <string name="today">Today</string>
    <string name="task_name">Task Name</string>
    <string name="task_fragment_option">Task Fragment Option</string>
    <string name="Arrow">Arrow</string>
    <string name="mark_pri">Mark flag</string>
    <string name="previous">Previous</string>
    <string name="future">Future</string>
    <string name="category">Category</string>
    <string name="task_option">Task Option</string>
    <string name="add_category">Create New Category</string>
    <string name="add_task_title">Input new task here</string>
    <string name="due_date">Due Date</string>
    <string name="no">No</string>
    <string name="due_time">Due Time</string>
    <string name="add_note">ADD NOTE</string>
    <string name="notes">Notes</string>
    <string name="update_task">Update Task</string>
    <string name="add_sub_task">Add Sub-task</string>
    <string name="no_category">No category</string>
    <string name="input_the_sub_task">Input the sub-task</string>
    <string name="no_date">No Date</string>
    <string name="no_time">No Time</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_3_days_later">3 Days Later</string>
    <string name="this_sunday">This Sunday</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="create_task">Create Task</string>
    <string name="completed_tasks_today">Completed Today</string>
    <string name="no_tasks_in_category">No tasks in this category.</string>
    <string name="guide_add_task">Click + to create your task</string>
    <string name="add_notes">Add notes</string>
    <string name="edit">Edit</string>
    <string name="mark_as_undone">Mark as undone</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="start_to_focus">Start to Focus</string>
    <string name="duplicate_task">Duplicate Task</string>
    <string name="delete">Delete</string>
    <string name="focusing">Focusing</string>
    <string name="paused">Paused</string>
    <string name="pause">Pause</string>
    <string name="end">END</string>
    <string name="hide_progress">Hide Progress</string>
    <string name="please_select_a_duration">Please select a duration</string>
    <string name="minutes">Minutes</string>
    <string name="continue_count_down">Continue</string>
    <string name="check_all_completed_tasks">Check all completed tasks</string>
    <string name="completed_time">Completed Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks_sorted_by">Tasks Sorted by</string>
    <string name="due_date_time"><![CDATA[Due Date & Time]]></string>
    <string name="task_create_time">Task Create Time</string>
    <string name="select">SELECT</string>
    <string name="alphabetical_a_z">Alphabetical A-Z</string>
    <string name="categories_display_on_homepage">Categories display on homepage</string>
    <string name="create_new">Create New</string>
    <string name="hide">Hide</string>
    <string name="create_category">Create category</string>
    <string name="input_here">Input here.</string>
    <string name="category_name_has_exceeded_the_word_limit">Category name has exceeded the word limit</string>
    <string name="save">SAVE</string>
    <string name="edit_the_category">Edit the category</string>
    <string name="category_color">Category color</string>
    <string name="default_color">Default</string>
    <string name="the_color_will_be_displayed_in_the_calendar_interface">The color will be displayed in the calendar interface</string>
    <string name="show">Show</string>
    <string name="no_tasks_for_the_day">No tasks for the day.</string>
    <string name="click_to_create_your_task">Click \'+\' to create your task.</string>
    <string name="keep_plan_for_x_days">Keep plan for %1$d days</string>
    <string name="click_to_login">Click to login</string>
    <string name="hi">Hi</string>
    <string name="tasks_overview">Tasks Overview</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="completion_of_daily_tasks">Completion of Daily Tasks</string>
    <string name="tasks_in_next_7_days">Tasks in Next 7 Days</string>
    <string name="pending_tasks_in_categories">Pending Tasks in Categories</string>
    <string name="calendar_view">Calendar View</string>
    <string name="space">-</string>
    <string name="add_task">Add task</string>
    <string name="enjoy_your_day">Enjoy your day!</string>
</resources>