<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:orientation="vertical"
    android:background="@drawable/background_white_radius_10dp"
    tools:context=".fragment.SoftPickerDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/tasks_sorted_by"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_bold"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/byDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@drawable/custom_background_checkbox"
            android:paddingStart="10dp"
            android:text="@string/due_date_time"
            android:textSize="16sp"
            android:fontFamily="@font/inter_regular"/>

        <RadioButton
            android:id="@+id/byCreateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@drawable/custom_background_checkbox"
            android:paddingStart="10dp"
            android:text="@string/task_create_time"
            android:textSize="16sp"
            android:fontFamily="@font/inter_regular"/>

        <RadioButton
            android:id="@+id/byAlphabetical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@drawable/custom_background_checkbox"
            android:paddingStart="10dp"
            android:text="@string/alphabetical_a_z"
            android:textSize="16sp"
            android:fontFamily="@font/inter_regular"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:text="@string/cancel"
            android:fontFamily="@font/inter_regular"
            android:textAllCaps="true"/>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:fontFamily="@font/inter_bold"
            android:textAllCaps="true"/>
    </LinearLayout>

</LinearLayout>
