<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.AddOrEditCategoryActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/task_option"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:text="@string/manage_categories"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:text="@string/categories_display_on_homepage"
        android:textAlignment="center"
        android:textSize="14sp"
        android:fontFamily="@font/inter_medium"
        android:background="@color/date_time_bg" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="7dp"/>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/buttonAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new"
        android:fontFamily="@font/inter_bold"
        android:textSize="16sp"
        android:clickable="false"
        android:background="@android:color/transparent"
        app:rippleColor="@null"
        app:icon="@drawable/ic_add"/>

</LinearLayout>