<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_white_radius_10dp"
    tools:context=".fragment.AddCategoryDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create_category"
        android:textSize="18sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <EditText
            android:id="@+id/editTextCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_radius_10dp"
            android:backgroundTint="@color/task_title_bg"
            android:focusable="true"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/input_here"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="50dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_text"
            android:textSize="16sp"
            android:maxLength="50"/>

        <TextView
            android:id="@+id/charCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:text="0/50"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/inter_regular"/>
    </FrameLayout>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/red"
        android:fontFamily="@font/inter_regular"
        android:text="@string/category_name_has_exceeded_the_word_limit"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:text="@string/cancel"
            android:fontFamily="@font/inter_regular"
            android:textAllCaps="true"/>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:fontFamily="@font/inter_bold"
            android:textAllCaps="true"/>
    </LinearLayout>
</LinearLayout>
