<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.TimerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonHide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/hide_progress"
            android:src="@drawable/ic_arrow_down"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/focusing"
            android:textSize="24sp" />
    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="false"
        app:indicatorColor="@color/blue"
        app:indicatorTrackGapSize="0dp"
        app:indicatorSize="300dp"
        app:trackColor="@color/date_time_bg"
        app:trackThickness="12dp"
        app:trackCornerRadius="15dp"
        app:indicatorDirectionCircular="counterclockwise"
        android:max="100"
        android:progress="100"/>

    <TextView
        android:id="@+id/textViewPaused"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/paused"
        android:textSize="36sp"
        android:fontFamily="@font/inter_bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textViewTimeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPaused"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="36sp"/>

    <Button
        android:id="@+id/buttonPauseOrContinue"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="0dp"
        android:paddingStart="90dp"
        android:paddingEnd="90dp"
        android:layout_below="@id/progress_circular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/pause"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/buttonEnd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="0dp"
        android:paddingStart="90dp"
        android:paddingEnd="90dp"
        android:layout_below="@id/buttonPauseOrContinue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/end"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:background="@android:color/transparent"
        android:visibility="gone"/>

</RelativeLayout>
