<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background_white_radius_10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/buttonPreMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/textViewMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/inter_regular"
            android:layout_marginEnd="10dp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <ImageButton
            android:id="@+id/buttonNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_white_radius_10dp"
        android:orientation="vertical">

        <include
            android:id="@+id/titlesContainer"
            layout="@layout/calendar_day_titles_container" />

        <com.kizitonwose.calendar.view.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:cv_scrollPaged="true"
            app:cv_dayViewResource="@layout/calendar_day_layout" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonNoDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:paddingStart="-5dp"
            android:paddingEnd="-5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/no_date"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/grey_text"
            android:background="@drawable/background_white_radius_5dp"
            app:backgroundTint="@color/task_title_bg"/>

        <Button
            android:id="@+id/buttonToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:paddingStart="-5dp"
            android:paddingEnd="-5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/today"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/grey_text"
            android:background="@drawable/background_white_radius_5dp"
            app:backgroundTint="@color/task_title_bg"/>

        <Button
            android:id="@+id/buttonTomorrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_white_radius_5dp"
            android:padding="0dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/tomorrow"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/grey_text"
            app:backgroundTint="@color/task_title_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3DaysLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginEnd="10dp"
            android:text="@string/_3_days_later"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/grey_text"
            android:background="@drawable/background_white_radius_5dp"
            app:backgroundTint="@color/task_title_bg"/>

        <Button
            android:id="@+id/buttonThisSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginEnd="10dp"
            android:text="@string/this_sunday"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/grey_text"
            android:background="@drawable/background_white_radius_5dp"
            app:backgroundTint="@color/task_title_bg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:text="@string/cancel"
            android:fontFamily="@font/inter_regular"
            android:textAllCaps="true"/>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:fontFamily="@font/inter_bold"
            android:textAllCaps="true"/>

    </LinearLayout>
</LinearLayout>