<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_radius_top_27dp"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:maxHeight="500dp"
    tools:context=".fragment.BottomSheetAddTaskFragment">

    <EditText
        android:id="@+id/titleTaskField"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@drawable/background_white_radius_10dp"
        android:backgroundTint="@color/task_title_bg"
        android:focusable="true"
        android:hint="@string/add_task_title"
        android:textColorHint="@color/grey_text"
        android:textColor="@color/black"
        android:textSize="18sp" />

        <com.example.todolist.customview.MaxHeightRecyclerView
            android:id="@+id/recyclerViewSubTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:visibility="gone"
            app:maxHeight="130dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAddCatagory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/task_title_bg"
                android:textSize="13sp"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:padding="0dp"
                android:text="@string/no_category"
                android:textStyle="normal"
                android:textColor="@color/grey_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/calendarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_calendar" />

            <ImageButton
                android:id="@+id/timeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_schedule" />

            <ImageButton
                android:id="@+id/subTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_add_subtask" />

            <ImageButton
                android:id="@+id/templateTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_template_task" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonCreateTask"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:padding="0dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_white_radius_5dp"
            android:text="@string/create_task"
            android:textColor="#98A2AC"/>
    </LinearLayout>

</LinearLayout>
